Adds YAML support

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="build/styles/style.css">
   </head>
   <body>
-    <h1>Ich bin ein Handlebars</h1>
+    <h1>Timo</h1>
     <cite>H.B.Senedy</cite>
     <footer>Aber mal ernsthaft</footer>    <script src="build/scripts/bundle.js"></script>
   </body>
