--- a/index.html
+++ b/index.html
@@ -6,8 +6,114 @@
     <link rel="stylesheet" href="build/styles/style.css">
   </head>
   <body>
-    <h1>Timo</h1>
-    <cite>H.B.Senedy</cite>
-    <footer>Aber mal ernsthaft</footer>    <script src="build/scripts/bundle.js"></script>
+    <h2>Zur Person</h2>
+    <dl>
+        <dt>Name</dt>
+        <dd>Timo Zöller</dd>
+        <dt>Wohnort</dt>
+        <dd>Berlin</dd>
+    </dl>    <h2>Werdegang</h2>
+    <dl>
+        <dt>2002</dt>
+        <dd><p>Abitur am Gymnasium Loger Straße</p>
+    </dd>
+        <dt>2003-2004</dt>
+        <dd><p>Studium der Philosophie und Germanistik an <strong>Universität Bremen</strong></p>
+    </dd>
+        <dt>2004-2010</dt>
+        <dd><p>Filmregie und Drehbuch Studium an der selbstorganisierten Filmschule <strong>Filmarche e.V.</strong></p>
+    </dd>
+        <dt>2011-heute</dt>
+        <dd><p>Arbeit als freiberuflicher Frontend-Entwickler</p>
+    </dd>
+    </dl>    <h2>Kunden (Auswahl)</h2>
+     <ul>
+      <li><p><a href="http://media-x-change.de/">Media-X-Change</a></p>
+    </li>
+      <li><p>Kluuu (jetzt <a href="https://voicerepublic.com">Voice Republic</a>)</p>
+    </li>
+      <li><p>Toroleo (jetzt <a href="http://www.reifen.de/">Reifen.de</a>)</p>
+    </li>
+      <li><p>Headwalk</p>
+    </li>
+      <li><p><a href="https://www.novacom.eu/">Novacom</a></p>
+    </li>
+      <li><p><a href="https://5apps.com/">5apps</a></p>
+    </li>
+      <li><p><a href="http://www.brettingham.de/">The Brettinghams</a></p>
+    </li>
+      <li><p><a href="https://www.smava.de/">Smava</a></p>
+    </li>
+    </ul>    <h2>Coding Kenntnisse</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd><p>Experte</p>
+    </dd>
+        <dt>Javascript</dt>
+        <dd><p>Experte</p>
+    </dd>
+        <dt>JS Frameworks</dt>
+        <dd>
+          <ul>
+              <li><p>React</p>
+    </li>
+              <li><p>Backbone</p>
+    </li>
+              <li><p>Ember</p>
+    </li>
+              <li><p>jQuery</p>
+    </li>
+              <li><p>Handlebars</p>
+    </li>
+              <li><p>Lo-Dash / Underscore</p>
+    </li>
+          </ul>
+        </dd>
+        <dt>JS Build Tools</dt>
+        <dd>
+          <ul>
+              <li><p>Grunt</p>
+    </li>
+              <li><p>Gulp</p>
+    </li>
+              <li><p>Webpack</p>
+    </li>
+          </ul>
+        </dd>
+        <dt>CSS</dt>
+        <dd><p>Experte</p>
+    </dd>
+        <dt>erweiterte CSS-Kenntnisse</dt>
+        <dd>
+          <ul>
+              <li><p>SASS</p>
+    </li>
+              <li><p>BEM</p>
+    </li>
+              <li><p>Styleguide Driven Development</p>
+    </li>
+              <li><p>Responsive Design</p>
+    </li>
+              <li><p>Progressive Enhancement</p>
+    </li>
+          </ul>
+        </dd>
+    </dl>    <h2>Soft Skills</h2>
+     <ul>
+      <li><p>Scrum</p>
+    </li>
+      <li><p>Erfahrung in deutsch- und englischsprachigen Teams</p>
+    </li>
+      <li><p>Refactorings</p>
+    </li>
+      <li><p>Konzeption von Frontend-Architekturen</p>
+    </li>
+    </ul>    <h2>Links</h2>
+     <ul>
+      <li><p><a href="https://github.com/pixelkritzel">Github</a></p>
+    </li>
+      <li><p><a href="https://twitter.com/pixelkritzel">Twitter</a></p>
+    </li>
+    </ul>    <script src="build/scripts/bundle.js"></script>
   </body>
 </html>
