--- a/index.html
+++ b/index.html
@@ -3,117 +3,120 @@
     <meta charset="UTF-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
     <link rel="stylesheet" href="build/styles/style.css">
   </head>
   <body>
-    <h2>Zur Person</h2>
-    <dl>
-        <dt>Name</dt>
-        <dd>Timo Zöller</dd>
-        <dt>Wohnort</dt>
-        <dd>Berlin</dd>
-    </dl>    <h2>Werdegang</h2>
-    <dl>
-        <dt>2002</dt>
-        <dd><p>Abitur am Gymnasium Loger Straße</p>
-    </dd>
-        <dt>2003-2004</dt>
-        <dd><p>Studium der Philosophie und Germanistik an <strong>Universität Bremen</strong></p>
-    </dd>
-        <dt>2004-2010</dt>
-        <dd><p>Filmregie und Drehbuch Studium an der selbstorganisierten Filmschule <strong>Filmarche e.V.</strong></p>
-    </dd>
-        <dt>2011-heute</dt>
-        <dd><p>Arbeit als freiberuflicher Frontend-Entwickler</p>
-    </dd>
-    </dl>    <h2>Kunden (Auswahl)</h2>
-     <ul>
-      <li><p><a href="http://media-x-change.de/">Media-X-Change</a></p>
-    </li>
-      <li><p>Kluuu (jetzt <a href="https://voicerepublic.com">Voice Republic</a>)</p>
-    </li>
-      <li><p>Toroleo (jetzt <a href="http://www.reifen.de/">Reifen.de</a>)</p>
-    </li>
-      <li><p>Headwalk</p>
-    </li>
-      <li><p><a href="https://www.novacom.eu/">Novacom</a></p>
-    </li>
-      <li><p><a href="https://5apps.com/">5apps</a></p>
-    </li>
-      <li><p><a href="http://www.brettingham.de/">The Brettinghams</a></p>
-    </li>
-      <li><p><a href="https://www.smava.de/">Smava</a></p>
-    </li>
-    </ul>    <h2>Coding Kenntnisse</h2>
-    <dl>
-        <dt>HTML</dt>
-        <dd><p>Experte</p>
-    </dd>
-        <dt>Javascript</dt>
-        <dd><p>Experte</p>
-    </dd>
-        <dt>JS Frameworks</dt>
-        <dd>
-          <ul>
-              <li><p>React</p>
-    </li>
-              <li><p>Backbone</p>
-    </li>
-              <li><p>Ember</p>
-    </li>
-              <li><p>jQuery</p>
-    </li>
-              <li><p>Handlebars</p>
-    </li>
-              <li><p>Lo-Dash / Underscore</p>
-    </li>
-          </ul>
-        </dd>
-        <dt>JS Build Tools</dt>
-        <dd>
-          <ul>
-              <li><p>Grunt</p>
-    </li>
-              <li><p>Gulp</p>
-    </li>
-              <li><p>Webpack</p>
-    </li>
-          </ul>
-        </dd>
-        <dt>CSS</dt>
-        <dd><p>Experte</p>
-    </dd>
-        <dt>erweiterte CSS-Kenntnisse</dt>
-        <dd>
-          <ul>
-              <li><p>SASS</p>
-    </li>
-              <li><p>BEM</p>
-    </li>
-              <li><p>Styleguide Driven Development</p>
-    </li>
-              <li><p>Responsive Design</p>
-    </li>
-              <li><p>Progressive Enhancement</p>
-    </li>
-          </ul>
-        </dd>
-    </dl>    <h2>Soft Skills</h2>
-     <ul>
-      <li><p>Scrum</p>
-    </li>
-      <li><p>Erfahrung in deutsch- und englischsprachigen Teams</p>
-    </li>
-      <li><p>Refactorings</p>
-    </li>
-      <li><p>Konzeption von Frontend-Architekturen</p>
-    </li>
-    </ul>    <h2>Links</h2>
-     <ul>
-      <li><p><a href="https://github.com/pixelkritzel">Github</a></p>
-    </li>
-      <li><p><a href="https://twitter.com/pixelkritzel">Twitter</a></p>
-    </li>
-    </ul>    <script src="build/scripts/bundle.js"></script>
+    <div class="container">
+      <h2>Zur Person</h2>
+      <dl>
+          <dt>Name</dt>
+          <dd>Timo Zöller</dd>
+          <dt>Wohnort</dt>
+          <dd>Berlin</dd>
+      </dl>      <h2>Werdegang</h2>
+      <dl>
+          <dt>2002</dt>
+          <dd><p>Abitur am <em>Gymnasium Loger Straße</em> in Osterholz-Scharmbeck</p>
+      </dd>
+          <dt>2003 - 2004</dt>
+          <dd><p>Studium der Philosophie und Germanistik an <em>Universität Bremen</em></p>
+      </dd>
+          <dt>2004 - 2010</dt>
+          <dd><p>Studium der Filmregie und Drehbuch an der selbstorganisierten Filmschule <em>Filmarche e.V.</em></p>
+      </dd>
+          <dt>2011 - heute</dt>
+          <dd><p>Arbeit als freiberuflicher Frontend-Entwickler</p>
+      </dd>
+      </dl>      <h2>Kunden (Auswahl)</h2>
+       <ul class="unstyled-list">
+        <li><p><a href="http://media-x-change.de/">Media-X-Change</a></p>
+      </li>
+        <li><p>Kluuu (jetzt <a href="https://voicerepublic.com">Voice Republic</a>)</p>
+      </li>
+        <li><p>Toroleo (jetzt <a href="http://www.reifen.de/">Reifen.de</a>)</p>
+      </li>
+        <li><p>Headwalk</p>
+      </li>
+        <li><p><a href="https://www.novacom.eu/">Novacom</a></p>
+      </li>
+        <li><p><a href="https://5apps.com/">5apps</a></p>
+      </li>
+        <li><p><a href="http://www.brettingham.de/">The Brettinghams</a></p>
+      </li>
+        <li><p><a href="https://www.smava.de/">Smava</a></p>
+      </li>
+      </ul>      <h2>Coding Kenntnisse</h2>
+      <dl>
+          <dt>HTML</dt>
+          <dd><p>Experte</p>
+      </dd>
+          <dt>Javascript</dt>
+          <dd><p>Experte</p>
+      </dd>
+          <dt class="buzzwords-defintion">JS Frameworks</dt>
+          <dd>
+            <ul class="buzzwords">
+                <li><p>React</p>
+      </li>
+                <li><p>Backbone</p>
+      </li>
+                <li><p>Ember</p>
+      </li>
+                <li><p>jQuery</p>
+      </li>
+                <li><p>Handlebars</p>
+      </li>
+                <li><p>Lo-Dash / Underscore</p>
+      </li>
+            </ul>
+          </dd>
+          <dt class="buzzwords-defintion">JS Build Tools</dt>
+          <dd>
+            <ul class="buzzwords">
+                <li><p>Grunt</p>
+      </li>
+                <li><p>Gulp</p>
+      </li>
+                <li><p>Webpack</p>
+      </li>
+            </ul>
+          </dd>
+          <dt>CSS</dt>
+          <dd><p>Experte</p>
+      </dd>
+          <dt class="buzzwords-defintion">CSS-Buzzwords</dt>
+          <dd>
+            <ul class="buzzwords">
+                <li><p>SASS</p>
+      </li>
+                <li><p>BEM</p>
+      </li>
+                <li><p>Styleguide Driven Development</p>
+      </li>
+                <li><p>Responsive Design</p>
+      </li>
+                <li><p>Progressive Enhancement</p>
+      </li>
+            </ul>
+          </dd>
+      </dl>      <h2>Soft Skills</h2>
+      <ul class="unstyled-list">
+          <li><p>Scrum</p>
+      </li>
+          <li><p>Erfahrung in deutsch- und englischsprachigen Teams</p>
+      </li>
+          <li><p>Refactorings</p>
+      </li>
+          <li><p>Konzeption von Frontend-Architekturen</p>
+      </li>
+      </ul>      <h2>Links</h2>
+      <ul class="unstyled-list ">
+          <li><p><a href="https://github.com/pixelkritzel">Github</a></p>
+      </li>
+          <li><p><a href="https://twitter.com/pixelkritzel">Twitter</a></p>
+      </li>
+      </ul>    </div>
+    <script src="build/scripts/bundle.js"></script>
   </body>
 </html>
